--- a/aliados/app/assets/stylesheets/welcome.scss
+++ b/aliados/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.navbar-btn{
+    color: aliceblue; 
+    padding-left: 30px;
+    padding-right: 30px;
+ }
