--- a/aliados/app/views/layouts/application.html.erb
+++ b/aliados/app/views/layouts/application.html.erb
@@ -13,12 +13,13 @@
     <%= yield %>
     <footer class="w3-black" style="padding: 6%;">
       <div class="w3-row">
-        <div class="w3-half">
-          <p>MAFERSITA</p>
+        <div class="w3-half w3-center">
+         
         </div>
-        <div class="w3-half">
+        <div class="w3-half w3-center">
           <p>ENEL CODENSA</p>
           <p>ALL RIGHTS RESERVED</p>
+          <%= link_to  "Administrador", new_administrator_session_path %>
         </div>
       </div>
     </footer>
