--- a/aliados/app/views/welcome/index.html.erb
+++ b/aliados/app/views/welcome/index.html.erb
@@ -1,53 +1,27 @@
-<div class="w3-container" style="padding: 20px; padding-left:50px;">
-  <div class="w3-row">
-    <div class="w3-half">
-      <%= image_tag 'enel.png' %>
-    </div>
-    <div class="w3-half"></div>
-  </div>
-</div>
+<%= render  "partials/banner" %>
+<%= render  "partials/navigation" %>
 
-<div class="w3-row w3-card-2" style="position: sticky; top: 0; z-index: 1;">
-  <div class="w3-bar w3-green">
-    <a href="#" 
-      class="w3-bar-item w3-button w3-hover-light-gray w3-padding-24" 
-      style="color: aliceblue; padding-left: 30px;padding-right: 30px;">
-    Inicio
-  </a>
-  <a href="#" 
-      class="w3-bar-item w3-button w3-hover-light-gray w3-padding-24" 
-      style="color: aliceblue; padding-left: 30px;padding-right: 30px;">
-    Reportar una falla
-  </a>
-  <a href="#" 
-      class="w3-bar-item w3-button w3-hover-light-gray w3-padding-24" 
-      style="color: aliceblue; padding-left: 30px;padding-right: 30px;">
-    Encuesta
-  </a>
-  <a href="#" 
-      class="w3-bar-item w3-button w3-hover-light-gray w3-padding-24" 
-      style="color: aliceblue; padding-left: 30px;padding-right: 30px;">
-    Preguntas frecuentes
-  </a>
-  <a href="#" 
-      class="w3-bar-item w3-button w3-hover-light-gray w3-padding-24 w3-right" 
-      style="color: aliceblue; padding-left: 30px;padding-right: 30px;">
-    Iniciar sesión
-  </a>
-  </div>
-</div>
 <div class="w3-container w3-light-gray">
   <div class="w3-row">
     <div class="w3-half" style="padding: 5%;">
-      <section class="w3-large">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Tempora mollitia corporis nihil explicabo hic! Earum iste enim a corrupti aliquam. 
-        Delectus, explicabo! Cumque, ad placeat labore voluptates optio necessitatibus aliquid!</section>
+      <section class="w3-large" align=justify>Bienvenido al Portal Aliados. 
+        <br>
+        <br>
+        Este espacio está diseñado para nuestros principales aliados con el objetivo de contar con un medio 
+        directo para realizar el reporte de cualquier tipo de falla o incidencia en la prestación del servicio
+        de oficina virtual.
+        <br>
+        <br>
+        Los aliados que ya tienen una identificación de usuario y contraseña reciben un correo electrónico
+        que les explica los pasos que deben realizar a través del Portal.
+        
+      </section>
     </div>
     <div class="w3-half">
       <div class="w3-content w3-display-container w3-card-4" style="max-width:400px; margin: 6%; margin-left:10%;">
-        <%= image_tag 'paisaje1.jpg', class: "mySlides w3-animate-left", style: "width:100%; height:300px" %>
-        <%= image_tag 'paisaje2.jpg', class: "mySlides w3-animate-left", style: "width:100%; height:300px" %>
-        <%= image_tag 'paisaje3.jpg', class: "mySlides w3-animate-left", style: "width:100%; height:300px" %>
+        <%= image_tag '1.jpg', class: "mySlides w3-animate-left", style: "width:100%; height:300px" %>
+        <%= image_tag '2.jpg', class: "mySlides w3-animate-left", style: "width:100%; height:300px" %>
+        <%= image_tag '3.jpg', class: "mySlides w3-animate-left", style: "width:100%; height:300px" %>
         <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
           <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
           <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
